<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home"
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/home"/>
    <item android:title="Profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:id="@+id/profile"/>
    <item android:title="Records"
        android:icon="@drawable/ic_baseline_list_24"
        android:id="@+id/records"/>
    <item android:title="Exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:id="@+id/exit"/>
</menu>