...
            app:layout_constraintStart_toStartOf="@+id/divider4"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Edit_buttonD"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_button"
        android:text="Edit"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/Delete_buttonD"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_button"
        android:text="Delete"
        android:textAllCaps="false"
...
