<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EBD8"
    tools:context=".ActivityGetStarted">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/GetStartedbutton"
        android:layout_width="250dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:text="Get Started"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>